--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "firebase": "^10.12.4",
     "json-server": "^1.0.0-beta.1",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
